# rustclaw

./: .env.example  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  commit-fix.sh  create-tag.sh  install.ps1  install.sh  rustclaw.toml.example
.github/workflows/: ci.yml  release.yml
crates/rustclaw-channel/: Cargo.toml
crates/rustclaw-channel/src/: lib.rs  utils.rs
crates/rustclaw-gateway/: Cargo.toml
crates/rustclaw-gateway/src/: config.rs  main.rs  service.rs
crates/rustclaw-logging/: Cargo.toml
crates/rustclaw-logging/src/: lib.rs
crates/rustclaw-mcp/: Cargo.toml
crates/rustclaw-mcp/src/: client.rs  config.rs  error.rs  http_client.rs  lib.rs  registry.rs  tool_bridge.rs
crates/rustclaw-mcp/tests/: integration_test.rs
crates/rustclaw-persistence/: Cargo.toml
crates/rustclaw-persistence/src/: lib.rs
crates/rustclaw-provider/: Cargo.toml
crates/rustclaw-provider/src/: context.rs  lib.rs
crates/rustclaw-skills/: Cargo.toml  README.md
crates/rustclaw-skills/src/: lib.rs  registry.rs  skill.rs
crates/rustclaw-types/: Cargo.toml
crates/rustclaw-types/src/: events.rs  lib.rs  message.rs  provider.rs  user.rs
docs/: RELEASE.md
docs/plans/: 2025-01-13-mcp-client-implementation.md  2025-01-16-mcp-client-design.md  2025-01-16-mcp-client-implementation.md  2026-02-09-rustclaw-design.md  2026-02-09-rustclaw-implementation.md  telegram-media-support.md
examples/: mcp_config.toml
examples/skills/brainstorming/: SKILL.md
examples/skills/code-reviewer/: SKILL.md
examples/skills/generating-commit-messages/: SKILL.md
examples/skills/testing/integration-tests/: SKILL.md
examples/skills/testing/unit-tests/: SKILL.md
