[workspace]
members = [
    "crates/rustclaw-types",
    "crates/rustclaw-logging",
    "crates/rustclaw-persistence",
    "crates/rustclaw-provider",
    "crates/rustclaw-channel",
    "crates/rustclaw-gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["UGENT"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"

# Configuration
config = "0.14"
dotenvy = "0.15"
dirs = "5.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# LLM
async-openai = "0.27"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }
