[workspace]
members = [
    "crates/rustclaw-types",
    "crates/rustclaw-logging",
    "crates/rustclaw-persistence",
    "crates/rustclaw-provider",
    "crates/rustclaw-channel",
    "crates/rustclaw-gateway",
    "crates/rustclaw-mcp",
    "crates/rustclaw-skills",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["UGENT"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["rt"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
toml = "1.0.1"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# MCP client
rmcp = { version = "0.15", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"

# Configuration
config = "0.14"
dotenvy = "0.15"
dirs = "5.0"
regex = "1.10"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "tls-rustls"] }

# Telegram (use rustls instead of native-tls)
teloxide = { version = "0.17", default-features = false, features = ["macros", "rustls"] }

# LLM (use rustls for HTTP client)
async-openai = { version = "0.32.4", features = ["chat-completion"] }

# UUID
uuid = { version = "1.21", features = ["v4", "serde"] }