[package]
name = "rustclaw-channel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rustclaw-types = { path = "../rustclaw-types" }
rustclaw-persistence = { path = "../rustclaw-persistence" }
rustclaw-provider = { path = "../rustclaw-provider" }
tokio.workspace = true
tokio-stream.workspace = true
teloxide.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
