[package]
name = "rustclaw-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# MCP SDK
rmcp = { workspace = true }

# HTTP client (for custom StreamableHttpClient impl)
reqwest = { version = "0.12", features = ["json", "stream"] }
http = "1"
sse-stream = "0.2"

# Internal crates
rustclaw-types = { path = "../rustclaw-types" }
rustclaw-provider = { path = "../rustclaw-provider" }

# Async runtime
tokio = { workspace = true, features = ["process", "time", "sync", "rt-multi-thread"] }
tokio-stream.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
toml.workspace = true

# Quality gates
[lints.rust]
dead_code = "deny"
unused_imports = "deny"
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
pedantic = "warn"
