[package]
name = "rustclaw-skills"
version = "0.1.0"
edition = "2021"
authors = ["UGENT Team"]
description = "Skills system for rustclaw AI agent with progressive disclosure"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
